--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
     <h1>Task Lister Lite™️</h1>
 
     <form id="create-task-form" action="#" method="post">
+
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
-      <input type="submit" value="Create New Task">
+
+      <input type="submit" id="submit" value="Create New Task">
     </form>
 
     <div id="list">
       <h2>My Todos</h2>
       <ul id="tasks">
       </ul>
+    </div>
+    <div id="list">
+      <a id="clear">Clear List</a>
     </div>
 
     <script src="./src/index.js"></script>
